# roboto_navigation

./: Dockerfile  README.md  tasks.txt
app/initialize/: init.bash
app/nav2_ws/src/FAST_LIO_ROS2/config/: mid360.yaml
app/nav2_ws/src/FAST_LIO_ROS2/launch/: mapping.launch.py
app/nav2_ws/src/FAST_LIO_ROS2/src/: laserMapping.cpp
app/nav2_ws/src/livox_converter/: package.xml  setup.cfg  setup.py
app/nav2_ws/src/livox_converter/launch/: launch.py
app/nav2_ws/src/livox_converter/livox_converter/: converter_node.py
app/nav2_ws/src/navigation2/nav2_bringup/launch/: tb3_simulation_launch.py
app/nav2_ws/src/navigation2/nav2_bringup/maps/: rectangle_map_generator.py  small_rectangle.pgm  small_rectangle.yaml
app/nav2_ws/src/navigation2/nav2_bringup/params/: nav2_params.yaml
app/nav2_ws/src/navigation2/nav2_bringup/worlds/: waffle.model
app/nav2_ws/src/pointcloud_to_laserscan/launch/: livox_launch.py
app/nav2_ws/src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
app/nav2_ws/src/sensor_launcher/: package.xml  setup.py
app/nav2_ws/src/sensor_launcher/launch/: launch.py
app/nav2_ws/src/ws_livox/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
app/nav2_ws/src/ws_livox/install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
app/nav2_ws/src/ws_livox/install/livox_ros_driver2/share/livox_ros_driver2/: local_setup.sh  package.sh
app/nav2_ws/src/ws_livox/log/: latest_build
notes/: navigation_presentation.excalidraw
(+3 files in other folders)
