<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_launcher</name>
  <version>0.0.1</version>
  <description>Launcher package for lidar sensor</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  
  <!-- Add your three packages as dependencies -->
  <exec_depend>unitree_lidar_ros2</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>lidar_odometry</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>